# sec_lib

./: Cargo.toml  LICENSE  README.md
resources/: MFAANG_Concepts.json
resources/test-data/: CIK0000320193.json  CIK0000789019.json  CIK0001018724.json  CIK0001065280.json  CIK0001326801.json
src/: company_names.rs  lib.rs  parse_facts.rs  resources.rs  tickers.rs
test-data/: CIK0001652044.json
