[package]
name = "sec_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.10.1"
aws-sdk-s3 = "0.10.1"
futures-util = "0.3.21"
log = "^0.4"
reqwest = { version = "0.11.10", features = ["stream", "gzip"]}
serde_json = "^1"
