[package]
name = "sec_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.8.4"
aws-sdk-s3 = "1.101.0"
futures-util = "0.3.31"
log = "0.4.27"
reqwest = { version = "0.12.23", features = ["stream", "gzip"]}
serde_json = "1.0.142"
simple_logger = "5.0.0"
tokio = { version = "1.47.1", features = ["macros"] }
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }